flux/clusters/pinkdiamond/media/deluge-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: deluge
  namespace: media
spec:
  serviceName: deluge
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: deluge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: deluge
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: gluetun
          image: ghcr.io/qdm12/gluetun:v3.41.1
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 128Mi
          # https://github.com/qdm12/gluetun-wiki/blob/main/setup/advanced/kubernetes.md
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/sh"
                  - "-c"
                  - "(ip rule del table 51820 2>/dev/null; ip -6 rule del table 51820 2>/dev/null) || true"
          volumeMounts:
            - name: vpn-config
              mountPath: /gluetun/wireguard
        - name: deluge
          image: lscr.io/linuxserver/deluge:2.2.0-ls371
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "2"
              memory: 1Gi
          ports:
            - containerPort: 8112
              name: http-web
            - containerPort: 6881
              name: bittorrent-tcp
              protocol: TCP
            - containerPort: 6881
              name: bittorrent-udp
              protocol: UDP
            - containerPort: 58846
              name: deluged
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: vpn-config
          emptyDir: {}
        - name: downloads
          persistentVolumeClaim:
            claimName: deluge-downloads
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        storageClassName: ssd-rbd
        accessModes:
          - ReadWriteOncePod
        resources:
          requests:
            storage: 1Gi
