flux/clusters/pinkdiamond/media/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vpn
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vpn
    spec:
      containers:
        - name: wg
          image: lscr.io/linuxserver/wireguard:1.0.20250521
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              add: [NET_ADMIN]
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 250m
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /config
      # TODO:
      # securityContext:
      #   sysctls:
      #     - name: net.ipv4.conf.all.src_valid_mark
      #       value: "1"
      volumes:
        - name: config
          emptyDir: {}
