flux/clusters/pinkdiamond/media/qbittorrent-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
  namespace: media
spec:
  serviceName: qbittorrent
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.1.4-r2-ls448
          ports:
            - containerPort: 8080
              name: http-web
            - containerPort: 6881
              name: bittorrent-tcp
              protocol: TCP
            - containerPort: 6881
              name: bittorrent-udp
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        storageClassName: ssd-rbd
        accessModes:
          - ReadWriteOncePod
        resources:
          requests:
            storage: 1Gi
