flux/clusters/pinkdiamond/media/qbittorrent-service.yml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
    - port: 8080
      targetPort: 8080
      name: http-web
