flux/clusters/pinkdiamond/media/deluge-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge
  namespace: media
  annotations:
    cert-manager.io/issuer-group: cert-manager.io
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer: thecluster.lan
spec:
  ingressClassName: haproxy
  rules:
  - host: deluge.thecluster.lan
    http:
      paths:
      - backend:
          service:
            name: deluge
            port:
              name: http-web
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - deluge.thecluster.lan
    secretName: deluge-tls
