flux/clusters/pinkdiamond/media/qbittorrent-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    cert-manager.io/issuer-group: cert-manager.io
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer: thecluster.lan
spec:
  ingressClassName: nginx
  rules:
  - host: qbittorrent.thecluster.lan
    http:
      paths:
      - backend:
          service:
            name: qbittorrent
            port:
              name: http-web
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - qbittorrent.thecluster.lan
    secretName: qbittorrent-tls
